[build-system]
requires = [
    "setuptools",
    "pyiron_workflow",
]
build-backend = "setuptools.build_meta"

[project]
name = "test_a"
description = "pyiron_node_store - test package."
version = "0.0.1"
dependencies = [
    "pyiron_workflow",
]

[project.entry-points."pyiron_node_store"]  # registers to the pyiron_node_store.nodes namespace
math = "test_a.math"  # the module math, which will be available via pyiron_node_store.nodes.math

[project.entry-points."pyiron_node_store.mathematics"]  # registers to the pyiron_node_store.mathematics namespace
sum = "test_a.math:sum"  # the function sum, which will be available via pyiron_node_store.mathematics.sum
prod = "test_a.math:product"  # the function product, which will be available via pyiron_node_store.mathematics.prod
